question 작성시 로그인유무 기능, question js 파일 추가

--- a/css/question-detail.css
+++ b/css/question-detail.css
@@ -702,7 +702,7 @@
 }
 .question-detail-sidebar {
 	position: relative;
-	display: none;
+	/* display: none; */
 	/* width: 280px; */
 	border-left: 1px solid #ededed;
 	/* margin-left: 40px;
