--- a/view/community/questionDetail.html
+++ b/view/community/questionDetail.html
@@ -138,6 +138,7 @@
         .col-xl-2 .question-detail-sidebar{
             position: sticky;
             top: 100px;
+            padding-left: 50px;
         }
 
         
@@ -390,7 +391,7 @@
 
     <div class="col-xl-2" style="border-left: 1px solid #ededed;">
         
-            <div class="question-detail-sidebar" style="padding-left: 50px;">
+            <div class="question-detail-sidebar" >
                 <div class="sidebar-header">
                     <div class="sidebar-header-writer">
                         <div class="row">
