--- a/view/community/questions.html
+++ b/view/community/questions.html
@@ -10,6 +10,8 @@
     <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
     <link rel="stylesheet" type="text/css" href="../../css/style.css">
     <link rel="stylesheet" type="text/css" href="../../css/question.css">
+    <link rel="stylesheet" type="text/css" href="../../css/question-detail.css">
+    <link rel="stylesheet" type="text/css" href="../../css/question-comment.css">
 
     <style>
     .questions-item-link:hover {
@@ -130,6 +132,7 @@
     padding-right: 10px;
   }
 
+
     
 
     
@@ -160,7 +163,7 @@
         <div id="questions-header">
 
           <div class="container">
-            <div class="questions-header__title">
+            <div class="questions-header-title">
               <h1 class="text-heading-1 text-black bold">
                 질문과 답변
               </h1>
@@ -172,14 +175,12 @@
             <form id="questions-headerform" class="sticky-top" action="/questions" accept-charset="UTF-8" method="get">
               <input name="utf8" type="hidden" value="&#x2713;" />
                   <div class="sticky-content">
-                    <div class="questions-header__form__wrap row">
-                      <div class="questions-header__form__search col">
-                        
+                    <div class="questions-header-form-wrap row">
+                      <div class="questions-header-form-search col">
                         <span class="icon icon-etc-find-sm-gray-dark search" aria-hidden="true">
                           <img src="../image/dbg.png" style="width: 22px; height: 22px; margin-left: 5px;">
                         </span>
-                        <input type="text" name="query" id="questions-header__form__search" value="" class="form-control" placeholder="궁금한 것을 검색해보세요." autocomplete="off" style="color: coral;"/>
-                        
+                        <input type="text" name="query" id="questions-header-form-search" value="" class="form-control" placeholder="궁금한 것을 검색해보세요." autocomplete="off" style="color: coral;"/>
                       </div>
                     </div>
                   </div>
@@ -276,7 +277,7 @@
                     <span class="questions-item-footer-author">
                         <span class="questions-item-footer-writer-img">
                             <img class="questions-item-footer-writer-image" src="../image/wdg.gif" 
-                            onerror="this.src='https://bucketplace-v2-development.s3.amazonaws.com/uploads/default_images/avatar.png'"><!-- 프로필사진 -->
+                            onerror="this.src='../image.avatar.png'"><!-- 프로필사진 -->
                         </span>
                         <span class="questions-item-footer-writer" >현성이배통통</span>
                     </span>
@@ -312,20 +313,20 @@
             <div class="questions-item" >
               <a class="questions-item-link" href="questionDetail.html">
                 <div class="questions-block">
-                <div class="questions-head-img" >
-                  <img class="questions-head-image" src="../image/wdg.gif">
+                  <div class="questions-head-img" >
+                    <img class="questions-head-image" src="../image/wdg.gif">
+                  </div>
+                  <div class="questions-head" >
+                    <h2 class="questions-title" >테스트글2</h2> <!-- 질문제목 -->
+                    <p class="questions-content" >붙박이장 어케 할까요?</p> <!-- 질문내용 -->
+                  </div>
                 </div>
-                <div class="questions-head" >
-                  <h2 class="questions-title" >어떻게 해야 할까요?</h2> <!-- 질문제목 -->
-                  <p class="questions-content" >붙박이장 어케 할까요?</p> <!-- 질문내용 -->
-                </div>
-              </div>
-            </a>
+              </a>
                 <footer class="questions-item-footer" >
                     <span class="questions-item-footer-author">
                         <span class="questions-item-footer-writer-img">
                             <img class="questions-item-footer-writer-image" src="../image/wdg.gif" 
-                            onerror="this.src='https://bucketplace-v2-development.s3.amazonaws.com/uploads/default_images/avatar.png'"><!-- 프로필사진 -->
+                            onerror="this.src='../image.avatar.png'"><!-- 프로필사진 -->
                         </span>
                         <span class="questions-item-footer-writer" >현성이배통통</span>
                     </span>
@@ -345,73 +346,15 @@
                       <span class="questions-item-footer-views-content">7</span>
                       </span>
                     </span>
-
-                    
                     <ul class="questions-item-footer-tags keyword-list" >
                       <li class="keyword-item questions-item-footer-tags-tag" role="button" >셀프인테리어</li>
                       <li class="keyword-item questions-item-footer-tags-tag" role="button" >자취</li>
                       <li class="keyword-item questions-item-footer-tags-tag" role="button" >돈낭비</li>
                       <li class="keyword-item questions-item-footer-tags-tag" role="button" >존망</li>
                     </ul>
-                    
-                    
                 </footer>
-              
               </div>
-
-              <!-- 테스트글3 -->
-            
-              <div class="questions-item" >
-                <a class="questions-item-link" href="questionDetail.html" >
-                  <div class="questions-block">
-  
-                  <div class="questions-head-img" >
-                    <img class="questions-head-image" src="../image/drsd.gif" >
-                  </div>
-                  <div class="questions-head" >
-                    <h2 class="questions-title"  >어떻게 해야 할까요?</h2> <!-- 질문제목 -->
-                    <p class="questions-content" >붙박이장 어케 할까요?</p> <!-- 질문내용 -->
-                  </div>
-                </div>
-              </a>
-                  <footer class="questions-item-footer" >
-                      <span class="questions-item-footer-author">
-                          <span class="questions-item-footer-writer-img">
-                              <img class="questions-item-footer-writer-image" src="../image/wdg.gif" 
-                              onerror="this.src='https://bucketplace-v2-development.s3.amazonaws.com/uploads/default_images/avatar.png'"><!-- 프로필사진 -->
-                          </span>
-                          <span class="questions-item-footer-writer">현성이배통통</span>
-                      </span>
-                      &nbsp;&nbsp;&nbsp;&nbsp;
-                      <span class="questions-item-footer-meta ">
-                        <time datetime="2021-05-17T19:49:16+09:00" class="questions-item-footer-date text-gray">
-                          방금
-                        </time>
-                        ·
-                        <span class="questions-item-footer-comments text-gray">
-                          댓글
-                          <span class="questions-item-footer-comments-content active">5</span>
-                        </span>
-                        ·
-                        <span class="questions-item-footer-views text-gray">
-                          조회
-                        <span class="questions-item-footer-views-content">7</span>
-                        </span>
-                      </span>
-
-                      <ul class="questions-item-footer-tags keyword-list" >
-                        <li class="keyword-item questions-item-footer-tags-tag" role="button" >셀프인테리어</li>
-                        <li class="keyword-item questions-item-footer-tags-tag" role="button">자취</li>
-                        <li class="keyword-item questions-item-footer-tags-tag" role="button" >돈낭비</li>
-                        <li class="keyword-item questions-item-footer-tags-tag" role="button" >존망</li>
-                      </ul>
-
-                  </footer>
-                
-                </div>
-
       </div>
-
     </div>
 
     <footer include-html="../commons/footer.html"></footer>
@@ -421,12 +364,17 @@
 <script>
   $(document).ready(function(){
 
+    // $('.questions-item-footer-writer-image').error(function(){
+    //   $('.questions-item-footer-writer-image').attr(src,'../image.avatar.png');
+    // });
+
+    //질문글 가져와서 뿌려주기
     $.ajax({
       url:"http://localhost:3000/getAllQuestionList",
       type: "get",
       success:function(list){
         alert('getAllQuestionList 성공')
-        alert(list)
+        //alert(list)
         $.each(list, function(i, val){
           let app = "<div class='questions-item' >"
                     + "<a class='questions-item-link' href='questionDetail.html>"
@@ -446,7 +394,7 @@
                     + "<footer class='questions-item-footer'>"
                     + "<span class='questions-item-footer-author'>"  
                     + "<span class='questions-item-footer-writer-img'>"
-                    + "<img class='questions-item-footer-writer-image' src='.../image/avatar.png' >"
+                    + "<img class='questions-item-footer-writer-image' src='' onerror='this.src='../image.avatar.png'' >"
                     // + ".../image/dddzz.gif"
                     // + "'>"
                     + "</span>"
@@ -489,7 +437,10 @@
 
 
   });
-  
+
+  //로그인한 계정 닉네임 가져오기
+  let sessionId = JSON.parse(sessionStorage.getItem("login"));
+  console.log(sessionId);
 
   function filterfunc() {
     var x = document.getElementById("Demo");
@@ -500,17 +451,37 @@
     }
   }
 
+  //질문하러 가기
   function questionwrite(){
+    if(sessionId == null) {
+        sessionId = '';
+        alert('로그인해주세요');
+        location.href="../login/login.html";
+    } else {
+    console.log(sessionId);
     location.href = "questionWrite.html";
+    }
   }
 
+  //질문에 답변하기
   function questionanswer(){
-
+    if(sessionId == null) {
+        sessionId = '';
+        alert('로그인해주세요');
+        location.href="../login/login.html";
+    } else {
+    console.log(sessionId);
+    location.href = "questionanswer.html";
+    }
   }
+
+  
+
   </script>
 <script src="../../assets/js/jquery.min.js"></script>
 <script src="../../assets/bootstrap/js/bootstrap.min.js"></script>
 <script src="../../js/includeHTML.js"></script>
 <script src="../../js/header.js"></script>
+
 
 </html>
