--- a/view/myPage/mainMyPage.html
+++ b/view/myPage/mainMyPage.html
@@ -63,18 +63,19 @@
 /* 오른쪽 파트 */
 
 /* 탭 */
-#my .nav-item{
-    padding: 0 20px 0 0;
+#my .nav-tabs{
+    margin: 40px 0;
 }
 
 #my .nav-link.active+.nav_line,
 #my .nav-link.active{
     border: none;
     border-bottom: solid #f4744c;
-    margin-right: -20px;
+    margin-bottom: -2px;
 }
-#my .nav-link:hover{
+#my .nav-tabs .nav-link{
     border: none;
+    margin-bottom: 0;
 }
 #my .nav-item a{
     font-size: 1.4em;
