--- a/view/commons/menuComm.html
+++ b/view/commons/menuComm.html
@@ -33,6 +33,7 @@
                                 <li class="nav-item"><a class="nav-link nav_a" href="../community/event.html">이벤트</a></li>
                                 <li class="nav-item"><a class="nav-link nav_a" href="../store/order.html">임시 주문페이지</a></li>
                                 <li class="nav-item"><a class="nav-link nav_a" href="../myPage/mainMyPage.html">임시 마이페이지</a></li>
+                                <li class="nav-item"><a class="nav-link nav_a" href="../admin/mainAdmin.html">관리자페이지</a></li>
                         </ul>
                 </div>
 
